@@ -129,6 +129,7 @@ If you get stuck, you can ask for help in the Plugin Forum.
 == Changelog ==
 
 = 7.6.2 - xxxx-xx-xx =
-* Deprecate - Remove Sofort support from the new accounts.
+* Deprecate - Remove Sofort support for new accounts.
+* Fix - Add Order Key Validation.
 
 [See changelog for all versions](https://raw.githubusercontent.com/woocommerce/woocommerce-gateway-stripe/trunk/changelog.txt).
